--- a/frontend/antisexism/src/index.css
+++ b/frontend/antisexism/src/index.css
@@ -62,7 +62,7 @@ code {
 
 .remark {
   border: .1rem solid #EEE;
-  margin: 1rem;
+  margin: 1rem 0;
   border-radius: 2rem 0;
   background: #f1b8b8;
   color: var(--text-color-dark)
