--- a/frontend/antisexism/src/index.css
+++ b/frontend/antisexism/src/index.css
@@ -1,9 +1,10 @@
 :root {
-  --main-background-color: #1a1a1b;
+  --main-background-color: #232629;
   --secondary-background-color : #4d4d4d;
   --text-color-light: #EEE;
   --text-color-dark: #111;
 }
+
 
 * {
 	-webkit-box-sizing: border-box;
