--- a/frontend/antisexism/src/index.css
+++ b/frontend/antisexism/src/index.css
@@ -1,60 +1,54 @@
 :root {
-  --main-background-color: #232629;
-  --secondary-background-color : #4d4d4d;
-  --text-color-light: #EEE;
-  --text-color-dark: #111;
+    --main-background-color: #232629;
+    --secondary-background-color: #4d4d4d;
+    --text-color-light: #EEE;
+    --text-color-dark: #111;
+    --main-button-color: #750303;
+    --main-links-color: #ce6767;
 }
 
-
 * {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	line-height: 1.75em;
-	font-size: 16px;
-	background-color: var(--main-background-color);
-  color: var(--text-color-light);
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.75em;
+    font-size: 16px;
+    background-color: var(--main-background-color);
+    color: var(--text-color-light);
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-
 img {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 li {
-	line-height: 1.5em;
+    line-height: 1.5em;
 }
 
 a {
-  text-decoration: none;
-  color : var(--text-color-light);
+    text-decoration: none;
+    color: var(--text-color-light);
 }
 
 a:hover {
-  text-decoration: none;
-  color : var(--text-color-light);
+    text-decoration: none;
+    color: var(--text-color-light);
 }
 
 textarea {
-  min-width: 100%;
+    min-width: 100%;
 }
-
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
 
 
 /**
@@ -62,63 +56,147 @@ code {
 */
 
 .remark {
-  border: .1rem solid #EEE;
-  margin: 1rem 0;
-  border-radius: 2rem 0;
-  background: #f1b8b8;
-  color: var(--text-color-dark)
+    border: .1rem solid #EEE;
+    margin: 1rem 0;
+    border-radius: 2rem 0;
+    background: #f1b8b8;
+    color: var(--text-color-dark)
 }
 
-.remark > div {
-  padding: 1rem;
+.remark>div {
+    padding: 1rem;
 }
 
 .header-remark {
-  border-bottom: .08rem solid #888;
-  background: #750303;
-  border-radius: 2rem 0 0 0;
-  color: var(--text-color-light)
+    border-bottom: .08rem solid #888;
+    background: #750303;
+    border-radius: 2rem 0 0 0;
+    color: var(--text-color-light)
 }
 
 .footer-remark {
-  border-radius: 0 0 2rem 0;
-  color : var(--text-color-dark);
+    border-radius: 0 0 2rem 0;
+    color: var(--text-color-dark);
 }
 
 .footer-remark a {
-  color : var(--text-color-dark);
+    color: var(--text-color-dark);
 }
 
 .description-remark {
-  font-size: 120%;
-  font-weight: 500;
-  text-decoration: none;
-  color : var(--text-color-dark);
+    font-size: 120%;
+    font-weight: 500;
+    text-decoration: none;
+    color: var(--text-color-dark);
 }
-
 
 .remark-button button {
-  background:grey;
-  border:none;
+    background: grey;
+    border: none;
 }
-
 
 .remark-button-suffered button {
-  background : #751313;
+    background: #751313;
 }
-.remark-button-suffered button:hover, .remark-button-suffered button:focus, .remark-button-suffered button:active {
-  background : #9e3030!important;
-  border-color: #9e3030!important;
-  box-shadow: 0 0 0 0.02rem #c33939!important;
 
+.remark-button-suffered button:hover,
+.remark-button-suffered button:focus,
+.remark-button-suffered button:active {
+    background: #9e3030!important;
+    border-color: #9e3030!important;
+    box-shadow: 0 0 0 0.02rem #c33939!important;
 }
+
 .remark-button-seen button {
-  background: #10375f;
+    background: #10375f;
 }
-.remark-button-seen button:hover, .remark-button-seen button:focus, .remark-button-seen button:active {
-  background: #185594!important;
-  border-color: #185594!important;
-  box-shadow: 0 0 0 0.02rem #2265ab!important;
+
+.remark-button-seen button:hover,
+.remark-button-seen button:focus,
+.remark-button-seen button:active {
+    background: #185594!important;
+    border-color: #185594!important;
+    box-shadow: 0 0 0 0.02rem #2265ab!important;
 }
 
 
+/**
+* Login
+*/
+
+.login .container {
+    height: 100%;
+    align-content: center;
+}
+
+.login .card {
+    height: 370px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: var(--secondary-background-color) !important;
+}
+
+.login .social_icon span {
+    font-size: 60px;
+    margin-left: 10px;
+    color: var(--main-button-color);
+}
+
+.login .social_icon span:hover {
+    color: white;
+    cursor: pointer;
+}
+
+.login .card-header h3 {
+    color: white;
+}
+
+.login .social_icon {
+    position: absolute;
+    right: 20px;
+    top: -45px;
+}
+
+.login .input-group-prepend span {
+    width: 50px;
+    background-color: var(--main-button-color);
+    color: #FFF;
+    border: 0 !important;
+}
+
+.login input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
+}
+
+.login .remember {
+    color: white;
+}
+
+.login .remember input {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-right: 5px;
+}
+
+.login .login_btn {
+    background-color: var(--main-button-color);
+    color: #FFF;
+    width: 100px;
+}
+
+.login .login_btn:hover {
+    color: #000;
+    background-color: white;
+}
+
+.login .links {
+    color: white;
+}
+
+.login .links a {
+    margin-left: 4px;
+    color: var(--main-links-color);
+}
