--- a/frontend/antisexism/src/index.css
+++ b/frontend/antisexism/src/index.css
@@ -297,6 +297,7 @@ code {
 }
 
 
+
 /**
 * Responses
 */
@@ -328,4 +329,25 @@ code {
     font-weight: 500;
     text-decoration: none;
     color: var(--text-color-dark);
+}
+
+
+/**
+* Admin
+*/
+
+.tableline .tablecell {
+    border : 0.05rem solid white
+}
+
+.tableline-header {
+    font-weight: 500;
+    text-align: center;
+}
+.tableline-header .tablecell {
+    padding: 1rem;
+}
+
+.tableline:hover {
+    background:#434b52;
 }
